# DDNS-Rust

./: CONTRIBUTING.md  Cargo.toml  README.md  config.example.toml
.github/workflows/: ci.yml
src/: lib.rs  main.rs  mods.rs  tests.rs
src/mods/: handle.rs  interfaces.rs  providers.rs  request.rs  statics.rs  types.rs
src/mods/config/: spawn.rs
src/mods/providers/: aliyun.rs  cloudflare.rs  dynv6.rs  types.rs
src/tests/: config.rs  ddns_proviers.rs  interdaces.rs  request.rs
