[package]
name = "ddns-rust"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
network-interface = { version = "1.1.1", features = ["serde"] }
idna = "0.5.0"
reqwest = { version = "0.11.22", features = [
    "socks",
    "brotli",
    "gzip",
    "deflate",
] }
serde = { version = "1.0.193", features = ["serde_derive"] }
tokio = { version = "1.34.0", features = ["full"] }
toml = "0.8.8"
async-trait = "0.1.74"
aliyun_dns = { version = "0.1.5", git = "https://github.com/pchpub/aliyun_dns.git", branch = "main" }
anyhow = "1.0.75"
env_logger = "0.10.1"
log = "0.4.20"
chrono = "0.4.31"

[profile.fast]
inherits = "release"
opt-level = 3
debug = false
split-debuginfo = 'off'
debug-assertions = false
overflow-checks = false
lto = true
panic = 'unwind'
incremental = false
codegen-units = 1
rpath = false

[profile.small]
inherits = "release"
opt-level = 'z'
debug = false
split-debuginfo = 'off'
debug-assertions = false
overflow-checks = false
lto = true
panic = 'unwind'
incremental = false
codegen-units = 1
rpath = false
